--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.sqlScriptEncoding:UTF-8
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
+spring.datasource.url=jdbc:mysql://${BIBLIOTECA_AVALIACAO_HOST}:${BIBLIOTECA_AVALIACAO_PORT}/${BIBLIOTECA_AVALIACAO_NAME}?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=${BIBLIOTECA_AVALIACAO_USER}
+spring.datasource.password=${BIBLIOTECA_AVALIACAO_PASSWORD:}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=${BIBLIOTECA_AVALIACAO_HBM2DDL}
